--- a/src/portals/admins/templates/admins/add_postman.html
+++ b/src/portals/admins/templates/admins/add_postman.html
@@ -10,6 +10,34 @@
 {% block content %}
 
     {# SAME FOR ALL #}
+
+
+<style>
+h4{
+    color: white;
+}
+    body{
+        background: rgb(31,31,31);
+        background: linear-gradient(90deg, rgba(31,31,31,1) 0%, rgba(71,67,67,1) 50%, rgba(31,31,31,1) 100%);
+}
+
+body::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+    body::-webkit-scrollbar-track {
+        background-color: #222222;
+    }
+
+    body::-webkit-scrollbar-thumb {
+        background-color: #FEC506;
+        outline: 1px solid black;
+        border-radius: 5px;
+    }
+</style>
+
+
     <div class="row justify-content-center">
         <div class="col-6">
             <h4>Add new Postman</h4>
