--- a/src/portals/admins/templates/admins/user_detail.html
+++ b/src/portals/admins/templates/admins/user_detail.html
@@ -26,7 +26,7 @@
 
                     {# USER IMAGE INFO #}
                     <div class="text-center">
-                        <h3 class="mb-0">
+                        <h3 id="path" class="mb-0">
                             {{ user.get_full_name }}
                             {% if user.is_active %}
                                 <i class="fa fa-check-circle text-success"></i>
