--- a/src/website/templates/website/home_new.html
+++ b/src/website/templates/website/home_new.html
@@ -4,53 +4,190 @@
 
 {% block base_content %}
     <!-- hero section start -->
+
+    <style>
+
+        body {
+            font-family: 'Ubuntu', sans-serif;
+            background: rgb(31, 31, 31);
+            background: linear-gradient(90deg, rgba(31, 31, 31, 1) 0%, rgba(71, 67, 67, 1) 50%, rgba(31, 31, 31, 1) 100%);
+        }
+
+        p {
+            color: white;
+        }
+
+        #bdy, #bdy1 {
+            color: white !important;
+            background: #525050;
+        }
+
+        #home, footer {
+            background: rgb(31, 31, 31);
+            background: linear-gradient(90deg, rgba(31, 31, 31, 1) 0%, rgba(71, 67, 67, 1) 50%, rgba(31, 31, 31, 1) 100%);
+        }
+
+        footer a {
+            font-weight: bold;
+            text-decoration: none;
+            color: white !important;
+        }
+
+        h1, h2 {
+            color: forestgreen;
+            font-weight: bold;
+            -webkit-text-stroke: black 1px;
+        }
+
+        #h3green {
+            color: forestgreen;
+        }
+
+        h3 {
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: black 1px;
+        }
+
+        span {
+            -webkit-text-stroke: black 1px;
+            color: #FEC506;
+            font-weight: bolder;
+        }
+
+        .title:hover {
+            transition: 0.2s;
+            transform: scale(1.1, 1.1);
+        }
+
+        #frame {
+            height: 400px;
+        }
+
+        #FirstSlider {
+            margin-bottom: 30px;
+        }
+
+        .twt {
+            display: flex;
+            height: 30px;
+            width: 30px;
+            margin: 0 15px;
+            border-radius: 8px;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none !important;
+            border: 1px solid rgba(0, 0, 0, 0);
+            transition: transform 0.5s;
+        }
+
+        .twt i {
+            font-size: 20px;
+            transition: transform 0.5s;
+        }
+
+        .twt:hover {
+            box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2), inset -4px -4px 6px -1px rgba(255, 255, 255, 0.7), inset -0.5px -0.5px 0px rgba(255, 255, 255, 1), inset 0.5px 0.5px 0px rgba(255, 255, 255, 0.15), inset 0px 12px 10px -10px rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(0, 0, 0, 0.01);
+            transform: translateY(2px);
+        }
+
+        .twt:hover i {
+            transform: scale(0.90);
+        }
+
+        .twt:hover .fa-facebook {
+            color: #3b5998;
+        }
+
+        .twt:hover .fa-twitter {
+            color: #00acee;
+        }
+
+        .twt:hover .fa-instagram {
+            color: #f14843;
+        }
+
+
+        body::-webkit-scrollbar {
+            width: 8px;
+            height: 8px;
+        }
+
+        body::-webkit-scrollbar-track {
+            background-color: #222222;
+        }
+
+        body::-webkit-scrollbar-thumb {
+            background-color: #FEC506;
+            outline: 1px solid black;
+            border-radius: 5px;
+        }
+
+
+        #btnStyled {
+            outline: none;
+            padding: 3px 40px 3px 40px;
+            cursor: pointer;
+            border-radius: 5em;
+            color: black;
+            background: linear-gradient(to right, #e1ad01, #FEC506);
+            border: 0;
+            text-align: center;
+            font-family: 'Ubuntu', sans-serif;
+            font-weight: bold;
+            font-size: 20px;
+            box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+            transition: 0.3s;
+            width: 100%;
+        }
+
+        #btnStyled:hover {
+
+            box-shadow: inset 8px 8px 8px #896d10, inset -12px -12px 12px #e7ba24;
+        }
+
+    </style>
+
     <section class="section hero-section bg-ico-hero" id="home">
-    <link rel="stylesheet" href="{% static 'core/theme/css/homeStyle.css' %}">
+        <link rel="stylesheet" href="{% static 'core/theme/css/homeStyle.css' %}">
 
-<!--Slider-->
+        <!--Slider-->
         <div style="margin-top: -128px">
-        <div id="FirstSlider" class="carousel slide" data-ride="carousel">
-        <!--Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#FirstSlider" data-slide-to="0" class="active"></li>
-            <li data-target="#FirstSlider" data-slide-to="1"></li>
-            <li data-target="#FirstSlider" data-slide-to="2"></li>
-        </ol>
-        <!--The slideshow-->
-        <div class="carousel-inner active" id="frame">
-            <div class="carousel-caption">
-                <h3>Welcome To </h3>
-                <h1 class="title">
-                    Pakistan
-                    <span>E-Post Service</span>
-                </h1>
-                <p></p>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" id="frame">
+                    <div class="carousel-caption">
+                        <h3>Welcome To </h3>
+                        <h1 class="title">
+                            Pakistan
+                            <span>E-Post Service</span>
+                        </h1>
+                        <p></p>
+                    </div>
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="{% static 'core/images/banner1.jpg' %}" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="{% static 'core/images/banner2.jpg' %}" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="{% static 'core/images/banner3.jpg' %}" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <div class="item " id="itm">
-                <img src="{% static 'core/images/banner1.jpg' %}" />
-            </div>
-            <div class="item active" id="itm2">
-                <img src="{% static 'core/images/banner2.jpg' %}" />
-            </div>
-            <div class="item" id="itm3">
-                <img src="{% static 'core/images/banner3.jpg' %}" />
-            </div>
-            <!--Left and right controls-->
-            <a class="left carousel-control" href="#FirstSlider" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#FirstSlider" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
-    </div>
-            </div>
-    <!--Slider-->
+        <!--Slider-->
 
 
-        <div class="container" >
+        <div class="container">
 
             <div class="row align-items-center">
                 <div class="col-lg-5">
@@ -69,7 +206,7 @@
 
 
                 </div>
-                <div class="col-lg-5 col-md-8 col-sm-10 ml-lg-auto" >
+                <div class="col-lg-5 col-md-8 col-sm-10 ml-lg-auto">
                     <div class="card overflow-hidden mb-0 mt-5 mt-lg-0" id="bdy">
                         <div class="card-header text-center" id="bdy1">
                             <h5 style="color: white; font-weight: bold;">Track your parcel</h5>
@@ -80,7 +217,7 @@
 
                                     <input type="text" id="search" name="search" class="form-control"
                                            placeholder="Parcel ID here">
-                                    <button id="btnStyled" type="submit" class="btn btn-sm btn-success">Search</button>
+                                    <button id="btnStyled" type="submit" class="btn btn-sm btn-primary">Search</button>
 
                                 </div>
                             </form>
@@ -135,12 +272,16 @@
                                     <div class="avatar-xs mr-3">
                                             <span class="avatar-title rounded-circle bg-soft-warning text-warning font-size-28">
                                                 <i class="mdi "></i>
-                                                <img src="{% static 'core/images/clockPNG.png' %}" alt="" height="50" class="logo logo-dark">
+                                                <img src="{% static 'core/images/clockPNG.png' %}" alt="" height="50"
+                                                     class="logo logo-dark">
                                             </span>
                                     </div>
                                     <div class="media-body">
-                                        <h3 >Time Saving</h3>
-                                        <p>Most of honored customers have time issues we are here to facilitate and eleminate those issues for you. using our resouces you can send your items online . By using our resources you will save your time of travel. so what are you waiting for ?</p>
+                                        <h3>Time Saving</h3>
+                                        <p>Most of honored customers have time issues we are here to facilitate and
+                                            eleminate those issues for you. using our resouces you can send your items
+                                            online . By using our resources you will save your time of travel. so what
+                                            are you waiting for ?</p>
                                     </div>
                                 </div>
                             </div>
@@ -152,12 +293,16 @@
                                 <div class="media">
                                     <div class="avatar-xs mr-3">
                                             <span class="avatar-title rounded-circle bg-soft-primary text-primary font-size-28">
-                                                <img src="{% static 'core/images/customerPNG.png' %}" alt="" height="50" class="logo logo-dark">
+                                                <img src="{% static 'core/images/customerPNG.png' %}" alt="" height="50"
+                                                     class="logo logo-dark">
                                             </span>
                                     </div>
                                     <div class="media-body">
-                                        <h3 >Customers</h3>
-                                        <p>Customers over the counter in post offices with a wide range of products.Customer need to have a knowledge of all the products their post office provides.Selling stamps and weighing/charging for letters, packets and parcels.</p>
+                                        <h3>Customers</h3>
+                                        <p>Customers over the counter in post offices with a wide range of
+                                            products.Customer need to have a knowledge of all the products their post
+                                            office provides.Selling stamps and weighing/charging for letters, packets
+                                            and parcels.</p>
                                     </div>
                                 </div>
                             </div>
@@ -169,12 +314,14 @@
                                 <div class="media">
                                     <div class="avatar-xs mr-3">
                                             <span class="avatar-title rounded-circle bg-soft-info text-info font-size-28">
-                                                <img src="{% static 'core/images/postOfficePNG.png' %}" alt="" height="50" class="logo logo-dark">
+                                                <img src="{% static 'core/images/postOfficePNG.png' %}" alt=""
+                                                     height="50" class="logo logo-dark">
                                             </span>
                                     </div>
                                     <div class="media-body">
                                         <h3>Our Motto Behind</h3>
-                                        <p>Our main objective behind this website is basically to facilitate you to send whished material online regardless of time and physical presence.</p>
+                                        <p>Our main objective behind this website is basically to facilitate you to send
+                                            whished material online regardless of time and physical presence.</p>
                                     </div>
                                 </div>
                             </div>
@@ -257,7 +404,9 @@
                                 <h3 class="mb-0">Postman</h3>
                             </div>
                             <p>
-                                Postmen deliver mails and parcel posts to residences and businesses. They perform mail delivery and collect signatures from the recipients. They perform other duties in connection with mail services from post offices or related organisations.</p>
+                                Postmen deliver mails and parcel posts to residences and businesses. They perform mail
+                                delivery and collect signatures from the recipients. They perform other duties in
+                                connection with mail services from post offices or related organisations.</p>
                         </div>
                     </div>
 
@@ -272,7 +421,9 @@
                             <div class="d-flex align-items-center mb-2">
                                 <h3 class="mb-0">Customer</h3>
                             </div>
-                            <p>Customers over the counter in post offices with a wide range of products.Customer need to have a knowledge of all the products their post office provides.Selling stamps and weighing/charging for letters, packets and parcels.
+                            <p>Customers over the counter in post offices with a wide range of products.Customer need to
+                                have a knowledge of all the products their post office provides.Selling stamps and
+                                weighing/charging for letters, packets and parcels.
                             </p>
                         </div>
                     </div>
@@ -290,13 +441,15 @@
         </div>
         <!-- end container -->
 
-    <h3 style="text-align: center; margin-top: 50px;">Locate Us</h3>
-    <div style="height:450px;  display:inline-block; overflow:hidden; width:100%; margin-bottom:-110px;">
-        <iframe style="position:relative; top:-55px; border:none;  width:100%;" height="480" src="https://www.google.com/maps/d/u/0/embed?mid=1dZ-CZwcEpGsUCEki_o5_u693mno&amp;z=10"></iframe>
-    </div>
+        <h3 style="text-align: center; margin-top: 50px;">Locate Us</h3>
+        <div style="height:450px;  display:inline-block; overflow:hidden; width:100%; margin-bottom:-110px;">
+            <iframe style="position:relative; top:-55px; border:none;  width:100%;" height="480"
+                    src="https://www.google.com/maps/d/u/0/embed?mid=1dZ-CZwcEpGsUCEki_o5_u693mno&amp;z=10"></iframe>
+        </div>
 
 
     </section>
+    <!-- Features end -->
     <!-- Features end -->
 
 {% endblock %}
