--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -6,7 +6,27 @@
 
 {% block base_title %}{% trans "Change Password" %}{% endblock %}
 {% block content %}
+    <style>
+        body {
+            background: rgb(31, 31, 31);
+            background: linear-gradient(90deg, rgba(31, 31, 31, 1) 0%, rgba(71, 67, 67, 1) 50%, rgba(31, 31, 31, 1) 100%);
+        }
 
+        body::-webkit-scrollbar {
+            width: 8px;
+            height: 8px;
+        }
+
+        body::-webkit-scrollbar-track {
+            background-color: #222222;
+        }
+
+        body::-webkit-scrollbar-thumb {
+            background-color: #FEC506;
+            outline: 1px solid black;
+            border-radius: 5px;
+        }
+    </style>
     <div class="row justify-content-center">
         <div class="col-12 col-sm-8">
             <div class="card">
