--- a/src/website/templates/website/home_new.html
+++ b/src/website/templates/website/home_new.html
@@ -186,9 +186,7 @@
         </div>
         <!--Slider-->
 
-
         <div class="container">
-
             <div class="row align-items-center">
                 <div class="col-lg-5">
                     <div class="text-white-50">
@@ -222,6 +220,9 @@
                                 </div>
                             </form>
 
+                            <div class="row mt-3">
+                                {% include 'core/include/message.html' %}
+                            </div>
                             {% if parcel %}
                                 <div class="" style="text-align: left;">
                                     <p class="text-left mt-2">
