Home Page Updated .Title .Header .Footer .Margin Dashboard Updated .User Details

--- a/src/website/templates/website/include/footer.html
+++ b/src/website/templates/website/include/footer.html
@@ -1,12 +1,60 @@
 {% load static %}
 <!-- Footer start -->
 <footer class="landing-footer">
+
+    <footer class="footer-48201" style="margin-bottom: -91px;">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 pr-md-5">
+
+                    <a href="#" class="footer-site-logo d-block mb-4"><img src="{% static 'images/truckPNG.png' %}" alt="" height="80" class="logo logo-dark"
+                             /><h2>Pak <span>E-Post Service</span></h2></a>
+
+                </div>
+                <div class="col-md">
+                    <ul class="list-unstyled nav-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Tracking</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <ul class="list-unstyled nav-links">
+                        <li><a href="#">Customer</a></li>
+                        <li><a href="#">Postman</a></li>
+                        <li><a href="#">Admin</a></li>
+                        <li><a href="#">Postal Codes</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <ul class="list-unstyled nav-links">
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms &amp; Conditions</a></li>
+                        <li><a href="#">Partners</a></li>
+                    </ul>
+                </div>
+                <div class="col-md text-md-center">
+                    <ul class="social list-unstyled">
+                        <li><a href="https://twitter.com/realzeepro" target="_blank" class="twt"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://facebook.com/realzeepro" target="_blank" class="twt"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://instagram.com/realzeepro" target="_blank" class="twt"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+    <hr style="margin-top: 100px;"/>
+
     <div class="container">
 
         <div class="row justify-content-center">
 
             <div class="col-lg-6 text-center">
-                <p class="mb-2">2022 - {% now 'Y' %} © Project - Designed and Developed by Team
+                <p class="mb-2">2021 - {% now 'Y' %} © Project - Designed and Developed by Team
                     <b class="text-danger"><i class="fa fa-sort-alpha-down"></i> Alpha</b>
                 </p>
                 <p>
@@ -17,5 +65,8 @@
         </div>
     </div>
     <!-- end container -->
+
+
+
 </footer>
 <!-- Footer end -->
