--- a/src/portals/admins/templates/admins/dashboard.html
+++ b/src/portals/admins/templates/admins/dashboard.html
@@ -27,8 +27,24 @@ body::-webkit-scrollbar {
         border-radius: 5px;
     }
 </style>
-    <div class="row">
 
+    <div class="row">
+        <div style="margin: 12px;">
+            {% if request.user.first_name %}
+            <h1 style="color: white;">Welcome! <span
+                    class="d-none d-xl-inline-block ml-1">{{ request.user.first_name }}</span></h1>
+            {% else %}
+            <h1 style="color: white;">Welcome! <span
+                    class="d-none d-xl-inline-block ml-1">{{ request.user.username }}</span></h1>
+            {% endif %}
+            <h6 style="color: white;">Post Office: <span
+                    class="d-none d-xl-inline-block ml-1">{{ request.user.city }}</span></h6>
+            <h6 style="color: white;">Postal Code: <span class="d-none d-xl-inline-block ml-1">{{ request.user.postal_code }}</span>
+            </h6>
+            <h6 style="color: white;">Email: <span class="d-none d-xl-inline-block ml-1">{{ request.user.email }}</span>
+            </h6>
+
+        </div>
         <div class="col-xl-12">
             <div class="row">
                 <div class="col-sm-3">
@@ -163,7 +179,7 @@ body::-webkit-scrollbar {
     {#                                                <span class="badge badge-dark">?</span>#}
     {#                                            </td>#}
     {#                                                <td class="text-success">#}
-    {#                                                    <b class=""><i#}
+    {#                                                    <b class=""><i>#}
     {#                                                            class="fa fa-check-circle"></i> {{ object.get_status_display }}#}
     {#                                                    </b>#}
     {#                                                </td>#}
