--- a/src/website/templates/website/base.html
+++ b/src/website/templates/website/base.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8"/>
     <link rel="icon" href="{% static "core/images/logo_1000.png" %}">
-    <title>App |
+    <title>Pak E-Post |
         {% block base_title %}
             Home
         {% endblock %}
