--- a/src/website/templates/website/home_new.html
+++ b/src/website/templates/website/home_new.html
@@ -186,10 +186,10 @@
         </div>
         <!--Slider-->
 
-        <div class="container">
+        <div class="container" >
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <div class="text-white-50">
+                    <div class="text-white-50" style="margin-top: 15px;">
                         <h2>
                             Pak <span>E-Post Service</span>
                         </h2>
