--- a/src/website/templates/website/include/header.html
+++ b/src/website/templates/website/include/header.html
@@ -2,16 +2,17 @@
 <nav class="navbar navbar-expand-lg navigation fixed-top sticky">
 
     <div class="container">
+        <h3 class="navbar-title" id="h3green">
+            Pak
+            <span>E-Post Service</span>
+        </h3>
         <a class="navbar-logo" href="/">
             {# WHITE #}
-            <img src="{% static 'core/images/logo_1000.png' %}" alt="" height="38" class="logo logo-dark">
+            <img src="{% static 'core/images/truckPNG.png' %}" alt="" height="45" class="logo logo-dark">
             {# COLORED #}
-
-            <img src="{% static 'core/images/logo_1000.png' %}" alt="" height="38" class="logo logo-light">
-
-
+            <img src="{% static 'core/images/logo_1000.png' %}" alt="" height="45" class="logo logo-light">
         </a>
-        <h5 class="align-bottom mt-auto mb-auto ml-3" style="color: white">Pak-E-Post</h5>
+
         <button type="button" class="btn btn-sm px-3 font-size-16 d-lg-none header-item waves-effect waves-light"
                 data-toggle="collapse" data-target="#topnav-menu-content">
             <i class="fa fa-fw fa-bars"></i>
